# betadogma

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Initial.md  Makefile  README.md  llm_project_brief.py  llm_project_brief.sh  mypy.ini  project_brief.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
.hypothesis/constants/: 04f2c6ea6276e42b  0697c12d73095b09  12dc6a92ea880f3b  1c45a8d39f77d051  1fe8a37396d7fb04  266b9af0f5fe7eed  2ac43bf119ee8d66  309739fa3d342677  5e932fa10e9cd0e4  66a7b1bf54c9afaf  76b9a369624a5071  89b44e477f3c2757  ab8e2677a2db6619  acdd931d92c0ad63  bd10b6ff3964c917  d774f9de855d79bc  f469a3ca51974398
betadogma/: __init__.py
betadogma/core/: __init__.py  encoder.py  losses.py
betadogma/data/: prepare_gtex.py
betadogma/decoder/: __init__.py
betadogma/experiments/: train.py
betadogma/nmd/: __init__.py  nmd_rules.py
betadogma/variant/: encode.py
data/: README.md  create_mini_dataset.py  create_mini_training_data.py  create_minimal_dataset_direct.py  create_minimal_dataset_with_junctions.py  fetch_data.py  fetch_minimal_data.py  fetch_raw_data.sh
docs/: DATASETS.md  MODEL_CARD.md  TASKS.md
notebooks/: README.md
src/betadogma/: __init__.py  model.py
src/betadogma.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/betadogma/core/: encoder.py  encoder_nt.py  heads.py  losses.py
src/betadogma/data/: __init__.py  create_overlapping_windows.py  dataset.py  encode.py  io.py  prepare_data.py  prepare_data.pyi  prepare_gencode.py  prepare_gtex.py  prepare_gtex.py.backup  prepare_nmd.py  prepare_variants.py
src/betadogma/decoder/: __init__.py  evaluate.py  isoform_decoder.py  types.py
src/betadogma/experiments/: train.py  train_decoder.py
src/betadogma/experiments/config/: default.yaml
src/betadogma/nmd/: nmd_model.py  nmd_rules.py
src/betadogma/type_stubs/torch/: __init__.pyi
src/betadogma/type_stubs/transformers/: __init__.pyi
src/betadogma/variant/: __init__.py  encode.py  simulate.py
src/scripts/: analyze_gtex_chr22.py  train_decoder_ranking_mock.py  verify_full_workflow.py
tests/: conftest.py  test_decoder_ranking.py  test_full_workflow.py  test_import.py
tests/core/: test_heads.py
tests/data/: tiny_model_weights.pt
tests/decoder/: test_decoder_logic.py  test_isoform_decoder.py  test_isoform_decoder_minus_strand.py  test_isoform_enumerator.py  test_splice_graph_builder.py
tests/train/: test_train.py
train/: __init__.py  make_training_data.py  prepare_model.py  test_setup.py  train.base.yaml  train.py  train_isoform_ranker.py
train/configs/: data.base.yaml  data.mini.yaml  train.base.yaml
train/configs/runs/structural/version_0/: events.out.tfevents.1759954883.EPUSPRIW06ED.16822.0
train/configs/runs/structural/version_1/: events.out.tfevents.1759963024.EPUSPRIW06ED.29972.0
train/configs/runs/structural/version_2/: events.out.tfevents.1759963235.EPUSPRIW06ED.30865.0
train/configs/runs/structural/version_3/: events.out.tfevents.1759963356.EPUSPRIW06ED.31118.0
train/configs/runs/structural/version_4/: events.out.tfevents.1759963488.EPUSPRIW06ED.31422.0  hparams.yaml
train/configs/runs/structural/version_5/: events.out.tfevents.1759963886.EPUSPRIW06ED.32473.0
train/configs/runs/structural/version_6/: events.out.tfevents.1759964041.EPUSPRIW06ED.32937.0
train/configs/runs/structural/version_7/: events.out.tfevents.1759964271.EPUSPRIW06ED.33699.0
