[tool.poetry]
name = "betadogma"
version = "0.0.1"
description = "Revising the central dogma through data."
authors = ["BetaDogma Team"]
readme = "README.md"
packages = [{ include = "betadogma", from = "src" }]


[tool.poetry.dependencies]
python = ">=3.10"
torch = ">=2.2"
numpy = ">=1.24"
pandas = ">=2.0"
pyyaml = ">=6.0"
scipy = ">=1.11"
tqdm = ">=4.66"
pydantic = ">=2.0"
biopython = ">=1.83"
pysam = ">=0.22"
pyfaidx = ">=0.7"
transformers = ">=4.41"
datasets = ">=2.20"
einops = ">=0.8"
networkx = ">=3.2"
numba = ">=0.59"
enformer-pytorch = ">=0.8.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"