[tool.poetry]
name = "betadogma"
version = "0.0.1"
description = "Revising the central dogma through data."
authors = ["BetaDogma Team"]
readme = "README.md"
packages = [{ include = "betadogma", from = "src" }]


[tool.poetry.dependencies]
python = ">=3.12"
torch = ">=2.6"
transformers = ">=4.42"
tokenizers = ">=0.14"
numpy = ">=1.24,<2.0"
pandas = ">=2.0"
pyarrow = ">=14.0"
pyfaidx = ">=0.8.1"
pyyaml = ">=6.0"
tqdm = ">=4.66"
networkx = ">=3.2"
pytorch-lightning = "^2.5.5"
tensorboard = "^2.20.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
ruff = ">=0.5"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
